Fixing gap issues

--- a/portfolio-website/styles/globals.css
+++ b/portfolio-website/styles/globals.css
@@ -6,16 +6,7 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  top:0;
-  left:0;
-}
-
-html {
-  background-color: #171717ff;
-  background-image: linear-gradient(rgba(63, 63, 63, 0.85), rgba(60, 60, 60, 0.85)), url("/images/background.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+  background-color: #433f3e;
 }
 
 .whole-page{
@@ -25,17 +16,30 @@ html {
 
 .content{
   padding: 40px;
-  margin-top: 75px;
   max-width: 1200px;
   min-width: 100px;
   margin-left: auto;
   margin-right: auto;
   color: white;
 }
+.background{
+  top: 0;
+  left: 0;
+  height: 100%;
+  background-image: linear-gradient(rgba(63, 63, 63, 0.85), rgba(60, 60, 60, 0.85)), url("/images/background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.gap{
+  top: 0;
+  left: 0;
+  margin-bottom: 65px;
+}
 
 .title, .project-title{
   font-size: 30px;
-  font-family: "Red Hat Display", sans-serif;;
+  font-family: "Red Hat Display", sans-serif;
 }
 
 /* PROJECTS */
@@ -49,7 +53,7 @@ html {
   font-weight: bold;
 }
 .project-tab{
-  flex: 47.32%;
+  flex: 47.18%;
   box-sizing: border-box;
   background-image: linear-gradient(rgba(47, 113, 234, 0.7), rgba(29, 80, 174, 0.7));
   flex-direction: column;
@@ -57,7 +61,6 @@ html {
   align-items: center;
   display: flex;
   width: 350px;
-  height: 500px;
   border-radius: 15px;
   margin: 0 10px;
   box-shadow: 0px 4px 6px rgba(32, 32, 32, 0.3);
@@ -74,6 +77,7 @@ html {
 }
 .project-tab .title {
   margin-bottom: 15px;
+  font-size: 28px;
 }
 .githubRedirect {
   filter: brightness(100);
@@ -110,7 +114,7 @@ html {
   border-radius: 20px;
   margin-right: 20px;
   box-shadow: 0px 4px 6px rgba(32, 32, 32, 0.3);
-  margin-bottom: 20px;
+  margin-top: 20px;
 }
 .name-card{
   background-image: linear-gradient(160deg, rgb(29, 29, 29), #171717ff);
@@ -119,6 +123,7 @@ html {
   font-weight: bold;
   box-shadow: 0px 4px 6px rgba(32, 32, 32, 0.3);
   flex: 51%;
+  margin-top: 20px;
 }
 .name-card text{
   display: block;
@@ -169,6 +174,10 @@ nav {
   padding: 10px 20px;
   box-shadow: 0px 4px 6px rgba(32, 32, 32, 0.3);
 }
+nav Link {
+  display: block;
+  position: fixed;
+}
 
 .navbar-item {
   color: #b7b7b7;
@@ -178,6 +187,9 @@ nav {
   margin-right: 15px;
   font-size: large;
   font-weight: bold;
+  box-sizing: border-box;
+  flex: 1 82.5%;
+  flex-direction: column;
 }
 .navbar-item:hover {
   color: white;
@@ -186,6 +198,8 @@ nav {
 
 .centered-items{
   display: flex;
+  box-sizing: border-box;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   flex-grow: 1;
@@ -197,19 +211,32 @@ nav {
 }
 
 .mcmeansLogo-dark {
-  position: absolute;
-  left: 16px;
+  position: fixed;
+  left: 28px;
+  top: 22px;
+  text-decoration: none;
+  display: flex;
+}
+.mcmeansLogo-dark div{
+  justify-content: center;
+  align-items: center;
+}
+.mcmeansLogo-dark text {
+  display: block;
+  margin-left: 8px;
+  color: #b7b7b7;
+  font-weight: bold;
+  font-size: larger;
+  font-family: "Red Hat Display", sans-serif;
+}
+.mcmeansLogo-dark:hover, 
+.githubLogo-dark:hover,
+.linkedinLogo-dark:hover {
+  filter: brightness(100);
 }
 
 .githubLogo-dark {
   margin-left: 15px;
-}
-.githubLogo-dark:hover {
-  filter: brightness(100);
-}
-
-.linkedinLogo-dark:hover {
-  filter: brightness(100);
 }
 
 /* FOOTER */
@@ -228,7 +255,7 @@ nav {
   font-weight: bold;
   position: fixed;
   bottom: 0;
-  background-image: linear-gradient(rgba(0,0,0,0), rgba(33, 33, 33, 0.8));
+  background-image: linear-gradient(rgba(100, 100, 100, 0), rgb(54, 54, 54));/*linear-gradient(rgba(0,0,0,0), rgba(33, 33, 33, 0.8));*/
   width: 100%;
   left: 0px;
 }
